Fixed The Responsiveness Of The Navbar On Smaller Screens

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,3 @@
-/* navbar.css */
 .navbar {
   width: 100%;
   height: 80px;
@@ -16,7 +15,7 @@
   max-width: 1200px;
   display: flex;
   align-items: flex-start;
-  justify-content:flex-start;
+  justify-content: flex-start;
 }
 
 .navbar-logo {
@@ -29,7 +28,7 @@
   z-index: 3;
 }
 
-.navbar-logo:hover{
+.navbar-logo:hover {
   color: #f44336;
   transition: color 0.2s ease-in-out;
 }
@@ -69,7 +68,6 @@
   color: #f3f4f5;
   cursor: pointer;
   right: 15px;
-
 }
 
 .search-icon:hover {
@@ -116,16 +114,21 @@
 }
 
 @media screen and (max-width: 768px) {
+  .navbar-container {
+    height: 100px;
+    padding-top: 10px;
+  }
+
   .nav-menu {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: -5px;
+    left: -15px;
+    width: 100vw;
+    height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgba(98, 121, 128, 0.9);
+    background-color: rgba(18, 21, 22, 0.95);
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
   }
@@ -134,17 +137,48 @@
     transform: translateX(0);
   }
 
-  .nav-item {
-    margin: 10px 0;
-    font-size: 24px;
-    font-weight: 500;
+  .nav-link {
+    font-size: 30px;
   }
 
-  .search-icon {
-    display: none;
+  .navbar-logo {
+    font-size: 24px;
+    padding-top: 0;
+    padding-right: 25px;
+    padding-left: 20px;
+    font-weight: bold;
+    color: #f3f4f5;
+    text-decoration: none;
+    z-index: 3;
   }
 
   .burger {
+    display: block;
+    position: absolute;
+    right: 15px; /* changed right property */
+    top: 25px; /* added top property */
+  }
+
+  .search-icon {
+    position: absolute;
+    display: flex;
+    right: 80px;
+    top: 25px;
+  }
+
+  .search-box {
+    display: none;
+    position: relative;
+    top: 0;
+    max-width: 200px;
+    max-height: 100px;
+  }
+
+  .search-box.active {
+    position: relative;
+    height: 40px;
+    left: 25%;
+    top: 0;
     display: block;
   }
 }
